--- a/project.config.json
+++ b/project.config.json
@@ -1,5 +1,5 @@
 {
-  "appid": "wx15ff4c7396fe5818",
+  "appid": "wx907de0ad07a3c51d",
   "compileType": "miniprogram",
   "libVersion": "3.5.2",
   "packOptions": {
